# myfm

./: .gitignore  README.md  meson.build  myfm-application-window.c  myfm-application-window.h  myfm-application.c  myfm-application.h  myfm-clipboard.c  myfm-clipboard.h  myfm-context-menu.c  myfm-context-menu.h  myfm-copy-operation.c  myfm-copy-operation.h  myfm-delete-operation.c  myfm-delete-operation.h  myfm-directory-menu.c  myfm-directory-menu.h  myfm-directory-view-utils.c  myfm-directory-view-utils.h  myfm-directory-view.c  myfm-directory-view.h  myfm-file-menu.c  myfm-file-menu.h  myfm-file-operations-copy.c  myfm-file-operations-copy.h  myfm-file-operations-create.c  myfm-file-operations-delete.c  myfm-file-operations-delete.h  myfm-file-operations-move.c  myfm-file-operations-move.h  myfm-file-operations-private.h  myfm-file-operations.c  myfm-file-operations.h  myfm-file.c  myfm-file.h  myfm-icon-renderer.c  myfm-icon-renderer.h  myfm-main.c  myfm-move-operation.c  myfm-move-operation.h  (+10 more)
data/: com.github.f35idk.myfm.desktop  meson.build
src/: meson.build  myfm-application.c  myfm-clipboard.c  myfm-clipboard.h  myfm-file-operations-copy.c  myfm-file.c  myfm-file.h  myfm-icon-renderer.c  myfm-icon-renderer.h  myfm-main.c  myfm-utils.c  myfm-utils.h
src/widgets/: myfm-directory-menu.c  myfm-directory-menu.h  myfm-directory-view.c  myfm-file-menu.c  myfm-multi-paned.c  myfm-window.c  myfm-window.h
