
executable (meson.project_name (),
            'myfm-main.c',
            'myfm-application.c',
            'myfm-file.c',
            'myfm-utils.c',
            'myfm-clipboard.c',
            'myfm-file-operations.c',
            'myfm-file-operations-move.c',
            'myfm-file-operations-copy.c',
            'myfm-file-operations-delete.c',
            'myfm-file-operations-create.c',
            'myfm-icon-renderer.c',
            'widgets/myfm-window.c',
            'widgets/myfm-directory-view.c',
            'widgets/myfm-multi-paned.c',
            'widgets/myfm-file-menu.c',
            'widgets/myfm-directory-menu.c',
            dependencies : [gtk_dep,
                            gio_dep,
                            glib_dep],
            install: true,
)
